--- a/style.css
+++ b/style.css
@@ -6,51 +6,82 @@ h1{
     color:gold;
     font-size: x-large;
     text-align: justify;
-    text-shadow: 5px, 10px,5px rgb(15, 12, 12) ;
+    text-shadow: 5px, 10px,5px rgb(15, 12, 12);
+    margin-bottom: 0%;
 }
 h2{
     color: yellow;
     font-size: large;
     text-align: left;
+    border-bottom: 0;
+    padding-bottom: 0;
+    margin-bottom:2%;
+
+    
 }
 h3{
     color: yellowgreen;
     font-size: medium;
     text-align: left;
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
 h4{
     color:greenyellow;
     font-size: small;
     text-align: left;
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
 h5{
     color: goldenrod;
     font-size: small;
     text-align: left;
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
 h6{
     color:darkgoldenrod;
     font-size: smaller;
     text-align: left;
+    margin-top: 0%;
+    margin-bottom: 1%;
 }
 p{
     color:white;
     font-family: 'Times New Roman', Times, serif;
 }
-a {
+img {
+    width: 40%;
+    height: 400px;
     text-decoration: none;
     image-orientation: center;
+    border-style:ridge;
+    border-width: 50px;
+    border-color: white black;
 }
-/*showed usage of text-transform*/
-#Highlight{
+/*showed usage of text-transform also comeback to this portion to center caption*/
+#TableFormat {
+    border: 1px solid black(231, 230, 176);
+    max-width: 100%;
+    margin-bottom: 3%;
+    
+}
+caption{
+    /*Display: flex;*/
+    align-items: center;
+    justify-content: center;
     text-align: center;
     font-size: larger;
     font-family: 'Times New Roman', Times, serif;
     font-style: oblique;
     font-weight: bolder;
     text-transform: capitalize;
+    
+    
 }
 th{
+    
     text-align: center;
     font-size: larger;
     font-family: 'Times New Roman', Times, serif;
@@ -69,15 +100,23 @@ li{
 /* created to separate the different time frame of work history */
 .heading2{
 font-family: 'Courier New', Courier, monospace;
+margin-top: 0%;
+    margin-bottom: 0%;
 }
 .heading3{
 font-family: 'Times New Roman', Times, serif;
+margin-top: 0%;
+    margin-bottom: 0%;
 }
 .heading4{
 font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+margin-top: 0%;
+    margin-bottom: 0%;
 }
 .heading5{
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+margin-top: 0%;
+    margin-bottom: 0%;
 }
 /*following sections is for the table settings  */
 .inputbox{
@@ -120,21 +159,21 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 {
     border: 1px solid black;
 }
+}
+rad1:hover{
+    outline: solid 10px black;
+    outline-offset: 10px;
+}
+rad2:hover{
+    outline: solid 10px black;
+    outline-offset: 10px;
+}
+rad3:hover {
+    outline: solid 10px black;
+    outline-offset: 10px;
 
 }
-rad1 (hover)
-{
-    ;
-}
-rad2 (hover)
-{
-
-}
-rad3 (hover)
-{
-
-}
-submit (hover)
-{
-
+submit:hover{
+outline: solid 10px black;
+outline-offset: 10px;
 }
