--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
 /* Technical Skills Survey Project part 1: Exercise 2.1 */
 body{
     background-color: rgb(83, 79, 90);
-}
+    border-style:hidden;
+    margin-trim:in-flow;
+    padding:in-flow;
+}   
 h1{
+    box-sizing: border-box;
     color:gold;
     font-size: x-large;
     text-align: justify;
     text-shadow: 5px, 10px,5px rgb(15, 12, 12);
     margin-bottom: 0%;
+    border-box: 
 }
 h2{
+    box-sizing: content-box;
     color: yellow;
     font-size: large;
     text-align: left;
@@ -20,6 +26,7 @@ h2{
     
 }
 h3{
+    box-sizing: content-box;
     color: yellowgreen;
     font-size: medium;
     text-align: left;
@@ -27,6 +34,7 @@ h3{
     margin-bottom: 0%;
 }
 h4{
+    box-sizing: content-box;
     color:greenyellow;
     font-size: small;
     text-align: left;
@@ -34,6 +42,7 @@ h4{
     margin-bottom: 0%;
 }
 h5{
+    box-sizing: content-box;
     color: goldenrod;
     font-size: small;
     text-align: left;
@@ -41,6 +50,7 @@ h5{
     margin-bottom: 0%;
 }
 h6{
+    box-sizing: content-box;
     color:darkgoldenrod;
     font-size: smaller;
     text-align: left;
@@ -59,15 +69,16 @@ img {
     border-style:ridge;
     border-width: 50px;
     border-color: white black;
+    border-radius: 50% 50%;
 }
 /*showed usage of text-transform also comeback to this portion to center caption*/
 #TableFormat {
     border: 1px solid black(231, 230, 176);
     max-width: 100%;
     margin-bottom: 3%;
-    
+    padding: .1%;
 }
-caption{
+caption {
     /*Display: flex;*/
     align-items: center;
     justify-content: center;
@@ -77,8 +88,7 @@ caption{
     font-style: oblique;
     font-weight: bolder;
     text-transform: capitalize;
-    
-    
+    padding: .1%;
 }
 th{
     
@@ -99,24 +109,28 @@ li{
 }
 /* created to separate the different time frame of work history */
 .heading2{
-font-family: 'Courier New', Courier, monospace;
-margin-top: 0%;
+    font-family: 'Courier New', Courier, monospace;
+    margin-top: 0%;
     margin-bottom: 0%;
+    padding: .1%;
 }
 .heading3{
-font-family: 'Times New Roman', Times, serif;
-margin-top: 0%;
+    font-family: 'Times New Roman', Times, serif;
+    margin-top: 0%;
     margin-bottom: 0%;
+    padding: .1%;
 }
 .heading4{
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-margin-top: 0%;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin-top: 0%;
     margin-bottom: 0%;
+    padding: .1%;
 }
 .heading5{
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-margin-top: 0%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 0%;
     margin-bottom: 0%;
+    padding: .1%;
 }
 /*following sections is for the table settings  */
 .inputbox{
@@ -176,4 +190,8 @@ rad3:hover {
 submit:hover{
 outline: solid 10px black;
 outline-offset: 10px;
+}
+Form {
+    width: 90%;
+    margin:auto;
 }
